--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@ path: home
 <div class="container mx-auto lg:h-screen flex flex-col justify-center items-center">
   <h1>
     Welcome to
-    <strong class="bg-clip-text text-transparent bg-gradient-to-r from-blue-500 to-purple-500">
+    <strong class="bg-clip-text text-transparent bg-gradient-to-r from-green-500 to-black-500">
       {{title}}
     </strong>
   </h1>
