--- a/src/index.html
+++ b/src/index.html
@@ -1,16 +1,16 @@
 ---
 layout: default
-title: Neat Starter
+title: rez gauche
 path: home
 ---
 
 <div class="container mx-auto lg:h-screen flex flex-col justify-center items-center">
-  <h1>
-    Welcome to
-    <strong class="bg-clip-text text-transparent bg-gradient-to-r from-green-500 to-black-500">
+  <h3>
+    //rez gauche///
+    <strong class="bg-clip-text text-transparent bg-gradient-to-r from-green-100 to-black-100">
       {{title}}
     </strong>
-  </h1>
+  </h3>
 
   <p>
     <abbr title="netlify cms, eleventy, alpine js & tailwind css">NEAT</abbr>
