--- a/src/index.html
+++ b/src/index.html
@@ -6,17 +6,17 @@ path: home
 
 <div class="container mx-auto lg:h-screen flex flex-col justify-center items-center">
   <h3>
-    //rez gauche///
-    <strong class="bg-clip-text text-transparent bg-gradient-to-r from-green-100 to-black-100">
+    / rez gauche //
+    <strong class="bg-clip-text text-transparent bg-gradient-to-r from-green-200 to-gray-200">
       {{title}}
     </strong>
   </h3>
 
   <p>
     <abbr title="netlify cms, eleventy, alpine js & tailwind css">NEAT</abbr>
-    Starter Template. Get Started by editing.
+    / /
     <code class="bg-gray-100 text-blue-800 p-1">/index.njk</code>
   </p>
 
-  {% include "./_includes/partials/content.html" %}
+  
 </div>
