--- a/src/index.html
+++ b/src/index.html
@@ -5,18 +5,35 @@ path: home
 ---
 
 <div class="container mx-auto lg:h-screen flex flex-col justify-center items-center">
-  <h3>
-    / rez gauche //
-    <strong class="bg-clip-text text-transparent bg-gradient-to-r from-green-200 to-gray-200">
+  <h2>
+    /
+    <strong class="bg-clip-text text-transparent bg-gradient-to-r from-green-500 to-gray-200">
       {{title}}
     </strong>
   </h3>
 
   <p>
-    <abbr title="netlify cms, eleventy, alpine js & tailwind css">NEAT</abbr>
+    <abbr title="netlify cms, eleventy, alpine js & tailwind css"> ... & </abbr>
     / /
-    <code class="bg-gray-100 text-blue-800 p-1">/index.njk</code>
+    <code class="bg-gray-100 text-blue-200 p-1">/art</code>
   </p>
+site under development...
+
+<script>
+  (function (s, e, n, d, er) {
+    s['Sender'] = er;
+    s[er] = s[er] || function () {
+      (s[er].q = s[er].q || []).push(arguments)
+    }, s[er].l = 1 * new Date();
+    var a = e.createElement(n),
+        m = e.getElementsByTagName(n)[0];
+    a.async = 1;
+    a.src = d;
+    m.parentNode.insertBefore(a, m)
+  })(window, document, 'script', 'https://cdn.sender.net/accounts_resources/universal.js', 'sender');
+  sender('42bba147488679')
+</script>
+
 
   
 </div>
