--- a/src/index.html
+++ b/src/index.html
@@ -7,15 +7,15 @@ path: home
 <div class="container mx-auto lg:h-screen flex flex-col justify-center items-center">
   <h2>
     /
-    <strong class="bg-clip-text text-transparent bg-gradient-to-r from-green-500 to-gray-200">
+    <strong class="bg-clip-text text-transparent bg-gradient-to-r from-green-500 to-purple-500">
       {{title}}
     </strong>
   </h3>
 
   <p>
-    <abbr title="netlify cms, eleventy, alpine js & tailwind css"> ... & </abbr>
+    <abbr title="netlify cms, eleventy, alpine js & tailwind css"> / & </abbr>
     / /
-    <code class="bg-gray-100 text-blue-200 p-1">/art</code>
+    <code class="bg-gray-100 text-blue-200 p-1">/artworks & more</code>
   </p>
 site under development...
 
