--- a/src/index.html
+++ b/src/index.html
@@ -10,30 +10,22 @@ path: home
     <strong class="bg-clip-text text-transparent bg-gradient-to-r from-green-500 to-purple-500">
       {{title}}
     </strong>
-  </h3>
+  </h1>
 
   <p>
     <abbr title="netlify cms, eleventy, alpine js & tailwind css"> / & </abbr>
     / /
-    <code class="bg-gray-100 text-blue-200 p-1">/artworks & more</code>
+    <code class="bg-gray-100 text-green-200 p-1">/artworks & more</code>
   </p>
+  {% include "./_includes/partials/content.html" %}
+  </p>
+
+</div>
+
 site under development...
 
-<script>
-  (function (s, e, n, d, er) {
-    s['Sender'] = er;
-    s[er] = s[er] || function () {
-      (s[er].q = s[er].q || []).push(arguments)
-    }, s[er].l = 1 * new Date();
-    var a = e.createElement(n),
-        m = e.getElementsByTagName(n)[0];
-    a.async = 1;
-    a.src = d;
-    m.parentNode.insertBefore(a, m)
-  })(window, document, 'script', 'https://cdn.sender.net/accounts_resources/universal.js', 'sender');
-  sender('42bba147488679')
-</script>
 
+  
 
   
 </div>
