--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,9 @@ path: home
 </div>
 
 site under development...
+  <small class="text-gray-500">
+        <a href="https://github.com/surjithctly/neat-starter" class="underline" target="_blank" rel="noopener">neat theme</a>
+    </small>
 
 
   
