--- a/src/index.html
+++ b/src/index.html
@@ -21,10 +21,10 @@ path: home
   </p>
 
 </div>
-
+ <small class="text-gray-500">
 site under development...
-  <small class="text-gray-500">
-        <a href="https://github.com/surjithctly/neat-starter" class="underline" target="_blank" rel="noopener">neat theme</a>
+ </p>
+        <a href="https://surjithctly.in/" class="underline" target="_blank" > neat theme by surjithctly </a>
     </small>
 
 
