--- a/src/index.html
+++ b/src/index.html
@@ -21,10 +21,9 @@ path: home
   </p>
 
 </div>
- <small class="text-gray-500">
-site under development...
- </p>
-        <a href="https://surjithctly.in/" class="underline" target="_blank" > neat theme by surjithctly </a>
+   <small class="text-gray-500">
+site under development.
+        <link href="https://surjithctly.in/" class="underline" target="_blank" > neat theme by surjithctly </a>
     </small>
 
 
