--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@ path: home
 </div>
    <small class="text-gray-500">
 site under development.
-        <link href="https://surjithctly.in/" class="underline" target="_blank" > neat theme by surjithctly </a>
+        <a href="https://surjithctly.in/" class="link" target="_blank" > neat theme by surjithctly </a>
     </small>
 
 
