--- a/src/index.html
+++ b/src/index.html
@@ -14,17 +14,17 @@ path: home
 
   <p>
     <abbr title="netlify cms, eleventy, alpine js & tailwind css"> / & </abbr>
-    / /
-    <code class="bg-gray-100 text-green-200 p-1">/artworks & more</code>
+    
+    <code class="bg-gray-100 text-green-200 p-1"> artworks & more </code>
   </p>
   {% include "./_includes/partials/content.html" %}
   </p>
 
 </div>
-   <small class="text-gray-500">
-site under development.
-        <a href="https://surjithctly.in/" class="link" target="_blank" > neat theme by surjithctly </a>
+   <small class="text-gray-400">
+        <a href="https://surjithctly.in/" target="_blank" > neat theme </a>
     </small>
+ </p>
 
 
   
