--- a/src/index.html
+++ b/src/index.html
@@ -23,9 +23,10 @@ path: home
 </div>
    <small class="text-gray-400">
         <a href="https://surjithctly.in/" target="_blank" > neat theme </a>
-    </small>
- </p>
-
+ </p>   
+        <em> courtesy of opencollective.com/surjithctly <em>
+ 
+</small>
 
   
 
