--- a/src/index.html
+++ b/src/index.html
@@ -22,9 +22,7 @@ path: home
 
 </div>
    <small class="text-gray-400">
-        <a href="https://surjithctly.in/" target="_blank" > neat theme </a>
- </p>   
-        <em> courtesy of opencollective.com/surjithctly <em>
+     {%   <a href="https://opencollective.com/surjithctly" target="_blank" > courtesy of opencollective.com/surjithctly </a> %}
  
 </small>
 
