--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@ path: home
   </h1>
 
   <p>
-    <abbr title="netlify cms, eleventy, alpine js & tailwind css"> / & </abbr>
+    <abbr title="netlify cms, eleventy, alpine js & tailwind css">  </abbr>
     
     <code class="bg-gray-100 text-green-200 p-1"> artworks & more </code>
   </p>
