--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@ path: home
 
 </div>
    <small class="text-gray-400">
-     {%   <a href="https://opencollective.com/surjithctly" target="_blank" > courtesy of opencollective.com/surjithctly </a> %}
+   <a href="https://opencollective.com/surjithctly" target="_blank" > courtesy of opencollective.com/surjithctly </a>
  
 </small>
 
