--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@ path: home
 
 </div>
    <small class="text-gray-400">
-   <a href="https://surjithctly.in/" target="_blank" > neat theme </a>
+   <a href="https://surjithctly.in/" target="_blank" > ♾ </a>
  
 </small>
 
