--- a/src/about.html
+++ b/src/about.html
@@ -3,5 +3,22 @@ layout: default
 title: about
 path: about
 ---
+<section class="mt-15">
+            </a>
+            </h2>
+            <p class="text-base leading-6 text-green-200 mb-3">
+       
+            {% endif %}
 
-about this website rezgauche
+            <p>
+                <a class="text-indigo-400 font-light text-lg">
+                    lets talk about it, while we are already doing it... →
+                </a>
+            </p>
+
+        </article>
+    {% endfor %}
+</section>
+
+
+
