--- a/src/about.html
+++ b/src/about.html
@@ -3,6 +3,29 @@ layout: default
 title: about
 path: about
 ---
+<div class="container mx-auto lg:h-screen flex flex-col justify-center items-center">
+  <h1>
+    /
+    <strong class="bg-clip-text text-transparent bg-gradient-to-r from-green-500 to-purple-500">
+      {{title}}
+    </strong>
+  </h1>
+
+  <p>
+    <abbr title="netlify cms, eleventy, alpine js & tailwind css">  </abbr>
+    
+    <code class="bg-gray-100 text-green-200 p-1"> artworks & more </code>
+  </p>
+  {% include "./_includes/partials/content.html" %}
+  </p>
+
+</div>
+   <small class="text-gray-400">
+ 
+</small>
+
+
+
 <section class="mt-15">
             </a>
             </h2>
