--- a/src/about.html
+++ b/src/about.html
@@ -3,45 +3,21 @@ layout: default
 title: about
 path: about
 ---
+
 <div class="container mx-auto lg:h-screen flex flex-col justify-center items-center">
   <h1>
     /
     <strong class="bg-clip-text text-transparent bg-gradient-to-r from-green-500 to-purple-500">
-      {{title}}
+      lets talk about it, while we are already doing it...
     </strong>
   </h1>
 
-  <p>
-    <abbr title="netlify cms, eleventy, alpine js & tailwind css">  </abbr>
-    
-    <code class="bg-gray-100 text-green-200 p-1"> artworks & more </code>
-  </p>
-  {% include "./_includes/partials/content.html" %}
   </p>
 
 </div>
    <small class="text-gray-400">
  
 </small>
-
-
-
-<section class="mt-15">
-            </a>
-            </h2>
-            <p class="text-base leading-6 text-green-200 mb-3">
-       
-            {% endif %}
-
-            <p>
-                <a class="text-indigo-400 font-light text-lg">
-                    lets talk about it, while we are already doing it... →
-                </a>
-            </p>
-
-        </article>
-    {% endfor %}
-</section>
 
 
 
