--- a/src/debunking/page-03.html
+++ b/src/debunking/page-03.html
@@ -63,8 +63,9 @@ IT                                                    
 Many years ago, I had a conversation about how love is a plural being. Some of its limbs and organs can be named with words of friendship, family, romance, Walt Disney, or the terrifying feeling of falling and being devoured by one of its bodily openings. What does it mean to see this body of love not as a natural beast, but as a cyborg? 
 
 
-- - -
-<div align="center>
+<hr>
+
+<div align="center">
             
 collective writing by participants of Debunking the Myth workhop at [apass.be](https://apass.be/debunking-the-myth) Brussels, November 2020
             
