--- a/src/debunking/page-02.html
+++ b/src/debunking/page-02.html
@@ -14,7 +14,7 @@ tags:
 HOW TO DIE IN A GOOD \
 WAY………………………………………………………………………………………………….ñ.   
 
- EVERYTHING IS ALIVE EVEN WHAT WE THINK IS DEATH}}}}}}}}}}}}}}}}}}}}}}}}}}}}}< 3
+EVERYTHING IS ALIVE EVEN WHAT WE THINK IS DEATH}}}}}}}}}}}}}}}}}}}}}}}}}}}}}<3</3>
 
 }}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}
 }}}}}}}}}}}}}}}}}}.,kb65w235gy,
