--- a/src/debunking/page-03.html
+++ b/src/debunking/page-03.html
@@ -10,7 +10,7 @@ tags:
 ---
 ## DEBUNKING THE MYTH
 
-    Many teachers in the world are teaching at the same time. Therefore it is difficult to hear. What is deep listening meaning to people practicing it<<<<<<<<<<<<<<<<<<<<<<<<3
+    Many teachers in the world are teaching at the same time. Therefore it is difficult to hear. What is deep listening meaning to people practicing it<<<<<<<<<<<<<<<<<<<<<<<<3 </3>3
 
 Love is an initiative. Or not? What is love ?                                                                                                                         Knowing the unknown is a possibility as well, 
 
