--- a/src/about.html
+++ b/src/about.html
@@ -10,260 +10,20 @@ path: about
     <strong class="bg-clip-text text-transparent bg-gradient-to-r from-green-500 to-purple-500">
       lets talk about it, while we are already doing it...
     </strong>
+    
+</h3>
+      contact
+</h3>
+</p>
+   <small class="text-gray-400">
+ <span>
+   email: info@transdisciplinary.art / address: Theodore Verhaegenstraat 154/rdc L B-1060 Brussels, Belgium / telephone: +32 488 367 723 / 
+payroll/administration: Verenigde Producties vzw, activiteit nr. 06349 transdisciplinary art foundation / Rue Coenraets 72, B-1060 Brussels / 
+V.A.T. BE 0896.755.397
+    
   </h1>
 
   </p>
 </div>
-
-</h3>
-      contents
-</h3>
-</div>
-   <small class="text-gray-400">
- Project
-        Introduction
-        Locality
-        Purpose
-Activities
-        Network
-
-Participation
-        A.i.R.
-        OpenCollective
-        Sputnik Dao
-
-
-Numbers
-Annual Budget
-Four Year Plan
-
-Roadmap
-</small>
-
-
-
-
-
-
-</h3>
-      contents
-</h3>
-
-
-project
-Introduction
-rezgauche.be was conceived in 2019 from a desire to transit from a curated art gallery to a decentralised organisation. 
-In the workshop “debunking the myth” given by Elke van Campenhout for the Advanced Performance and Scenography Studies (apass.be), Stef Meul started to rethink the possibilities of reshaping the use of his gallery/atelier. 
-He devised three initial paths to transit from the previous situation: 
-Work with Smart Activity to create artistic employment.
-Start a cooperative to diversify the stakeholders and share the responsibility. 
-Make a DAO and/or a DISCO and develop the gallery as a smart contract.
-
-rezgauche.be is an open invitation to artists, commoners and organisations within and beyond the already developed communities.
-rezgauche.be is a response to a need for an immediate representation of artists, coupling responsibility with making decisions.
-
-<br>
-
-Locality
-
-rezgauche.be has its main node at the gallery / atelier located at Rue Theodore Verhaegen 154, Brussels. 
-
-Adjacent to the gallery / atelier there is a small kitchen, restroom, courtyard, an underground home studio, suitable for graphic design, music production and/or audiovisual post-production. 
-A shared apartment for hosting residents will become available in the near future.
-
-In the area, Porte-de Halle, Place Bethlehem, there are lots of little restaurants, shops,  supermarkets, cultural venues (Tricoterie des Liens, Pianofabriek, Jacques-Frank) and art venues (Deborah Bowman, Alma Sarif). On walking distance there is the Wiels contemporary art center, Midi Station, Duden Parc, P.A.R.T.S, Communa asbl Maxima site, Artist Commons asbl Chassart studio, Parvis Saint-Gilles, Place Jeu de balle, etc.
-
-A large window at the street side lends itself to a view into the gallery. Yet, there is no door that gives front access. Visitors need to pass through the gate and the courtyard before entering the space, which allows for a sense of distance between persons at work and mere passersby.
-
-This display towards the streetside has proven itself to be very useful for visual and performance artworks. The performances are viewable from the street, framed within the gallery’s window, sometimes causing consternation because of non-heteronormative interaction, lack of costumes, etc.
-If performing happens with a public on the streetside, the performance’s sound can be made audible by amplifying the indoor sound through the basement studio ventilation, making it audible outdoors.
-
-Alternatively, the gallery can be made invisible from outside, by adding a curtain, and events can happen in a more intimate setting between the persons present. This is often easier when working with research, rehearsals, meetings, meditations, preparing exhibitions, etc. And if the weather allows, the courtyard is nice for gatherings, reflection, and occasional events. 
-
-Specific to this location is that nothing (creations, material, artworks, etc) can be placed in the corridors, courtyard, or outside the area of the gallery, because this obstructs the common use of the building’s occupants. That means in practice that how you make/do things has to consider any residuals of your practice. With late night events, the neighbours need to be involved somehow, and/or reduce the volume of noise and music, so that their kids and early hard working adults can enjoy their beauty sleep.
-Purpose
-
-rezgauche.be is reshaping commoning: thinking, developing and practising inclusive structures that balance responsibility, resources and stakeholdership with participation and decentralised forms of organisation. 
-Activities
-
-S.W.E.A.T.
-Softly We Entered Another Truth is rethinking work through practice. 
-It wants to put into question the value of the body: its products, services and experiences. 
-
-S.W.E.A.T. asks: What is performance in context of an insubstantial artform? How can performance art extend beyond a notion of labour time, or beyond valorisation of excessive (re)actions? 
-
-Artists are invited to experiment and present the process in an informal, professional, post-work society. Frequency and format of presentation is following the artistic process. Resources, benefits, risks and responsibilities are shared.
-
-Softly We Entered Another Truth functions as an experimental practice of a life beyond capitalist consumer culture and engages participants through displacement into artistic practice, love and care. 
-
-art research 
-A.R. is an open space for engaging with the research process of the participants. It shapes itself along the artistic research proposals by the artists present. The participants can share the research with each other, but can also just work by themselves. Art research can be open to the public and guests can be invited, whenever the researchers want to include this in their process.
-A.R. happens monthly or bi-monthly, and can include the participants of the A.i.R. 
-
-
-
-
-Network
-
-In an initial stage rezgauche.be will build on the contacts and nodes connected to the social interactions and acquaintances of Stef Meul, which consist of, but are not limited to:
-transdisciplinary.art, s19, cunst.link, tic tac art centre, sixty days of Improvisation workshop, artist commons, performance art brussels, apass, sign6, le chien perdu, sandberg institute dirty art department, AHK moderne theaterdans, HKU digital video design, ponderosa workshop, paf summer university, stage flavour, department of bad television, état ouvert, unlike very performing conditions festival, performing desires festival, you can call me page collective, nowhereart collective, school of love, tantra la limite, narafi film and tv, Rudolf Steinerschool Gent, communa, entrakt studio city gate, instant collective, PARTS summer school, family, friends and personal contacts etc. 
-Estimation contacts by email and/or telephone = 3160. Estimation contacts by message in social network = 7466. Potential double contacts = 40 %. Estimated contacts in network = 4250. 
-If 1% interested = 42 leads.
-In the principle of peer-2-peer practice, the initial contacts are encouraged to connect to their social base, therefore causing the network to become more robust and decentralised. A reference person can act as an introduction between participants, to build trust and share responsibility among the network constituents.
-Persons with affinity with rezgauche.be’s purpose are also welcome to join without any prior connection to its network. 
-In due time rezgauche.be will expand into the global commons, while allowing it to be accessible through sharing responsibility with its participants.
-
-participation
-
-A.i.R.
-rezgauche.be  launches an open call in summer of 2021, inviting artists to apply for a residency.
-The residency can be one, two or three weeks in duration. 
-Artists can apply as individuals or as part of a collective, an organisation, etc. 
-The applicant needs to define the starting date of their residency.
-A project description is requested, with emphasis to BE PRACTICAL in the proposal - with openness to changes according to the project’s situation and/or inspiration during the residency.  
-The applicant is requested to describe the economy of their proposal: values, consumption, production, funds, donations, exchange, benefits, etc.  Application form: https://framaforms.org/artist-residency-application-1625905255 
-
-The rezgauche.be A.i.R. selection criteria are based on:
-
-
-complete application
-inclusivity: how to make it possible?
-time-space compatibility
-available resources
-desire for responsibility
-
-Artistic autonomy of the projects in residence and the artist’s care for the workspace: before, during and after their residency - are considered important. The decisions for selection are made by the stakeholders of rezgauche.be and will happen through a participants meeting, and/or by online voting on the proposals in a dao/disco*.
-*https://elements.disco.coop
-OpenCollective
-To become a participant rezgauche.be and develop its structure, a collective fund is organised through opencollective.com.
-
-This allows for a transparent insight in the funds, costs and expenses of rezgauche.be. 
-A fiscal host takes care of the financial administration.
-Donation and funding can be requested and received through opencollective.com and the fiscal host can provide tax deductible proofs for persons and organisations that would like to finance, support and sponsor rezgauche.be.
-
-Employment for rezgauche.be can take place through the Verenigde Producties vzw (Smart Activity transdisciplinary art foundation, project rez gauche) by invoicing the opencollective.
-
-
-Sputnik Dao
-To be a stakeholder of rezgauche.be and decide on its participants' proposals, the formation of a dao and/or a disco will take place. 
-To develop this practice, rezgauche.be’s stakeholders will create a dao on the Near protocol blockchain. https://www.sputnik.fund/#/select-dao. This makes it possible for persons to engage with rezgauche.be’s organisation remotely and asynchronously. 
-The Near blockchain has very low network fees, human readable addresses, fast transaction times, proof of stake, the aurora bridge for cross chain transactions, and is climate neutral https://near.org/blog/the-near-blockchain-is-climate-neutral/ - therefore making sputnik dao an interesting decentralised technology to start with when compared to aragon on ethereum, or the disco tech stack which is, at the time of writing this text, still in its development stage.
-A workshop to initiate the rezgauche.be dao, and voting on its procedures will be organised with participants and stakeholders. Documentation will be made available to new participants and help provided where needed.
-
-
-
-
-
-numbers
-
-Annual Budget
-
-monthly 
-rent + water = 465 
-electricity = 150 
-internet = 40
-(subtotal annual costs 7860 + 5% variable)
-the annual total cost of the space is approximately 8253 euro. 
-
-Event / residency costs ...
-Four Year Plan
-Estimation budget forecast
-Costs
-Events
-Projects
-Funds 
-Sponsors
-Investment / financing
-and transfer from investment to surplus …
-
-
-
-
-
-
-roadmap
-11 / `20 
-initial idea and desire for this experiment.
-read article https://rezgauche.be/debunking/page-05/ 
-12 / `20
-proposal for creating a sustainable economy for artist ecosystem.
-read article https://rezgauche.be/posts/creation-a-sustainable-economy-for-the-artists-eco-system 
-
-1 - 4 / `21
-build and launch website version 1.0 
-prepare AK exposition
-prepare Motion workshop
-5 - 7 / `21
-Abraham Kelly exposition: https://rezgauche.be/posts/abraham-kelly/
-Motion workshop: https://www.youtube.com/watch?v=XJnV41LQ7_w
-Launch open call: https://rezgauche.be/posts/initial-proposal-forms-of-work/ 
-8 - 9 / `21
-compile year planning 2022
-apply for funding
-Motion residency
-10 - 11 / `21
-exposition and events
-cooperative stakeholders business plan
-initiate seed funding round 1: founders
-build website version 2.0
-test case smart contract
-12 / `21
-consolidate forms of work for 2022 
-launch website 2.0
-
-1 - 6 / `22
-residencies, activities and events
-beta phase smart contract
-apply for funding
-7 - 8 / `22
-reshape forms of work
-compile year planning 2023
-build website version 3.0
-9 - 12 / `22
-seed funding round 2: investors
-residencies, activities and events
-
-1 / `23
-launch website 3.0
-alpha phase smart contract
-extend into global networks
-define public foundation (art, disparity, ecology)  
-1 - 6 / `23
-residencies, activities and events
-apply for EU funding
-develop profit sharing communities
-7 - 8 / `23
-reshape forms of work
-compile year planning 2024
-apply for funding
-9 - 12 / `23
-residencies, activities and events
-seed funding round 3: profit sharing community
-search global for strategic real estate, ecological development
-
-
-1 - 6 / `24
-launch public foundation
-residencies, activities and events
-7 - 8 / `24
-evaluation of the `20 -`24 four year plan
-renewal and reshaping of forms of work
-compile year planning 2025
-9 - 12 / `24
-new roadmap
-… 
-
-REZ
-GAU
-CHE
-.be
-
-
-CONTACT
-
-email: info@transdisciplinary.art / address: Theodore Verhaegenstraat 154/rdc L B-1060 Brussels, Belgium / telephone: +32 488 367 723 / 
-payroll/administration: Verenigde Producties vzw, activiteit nr. 06349 transdisciplinary art foundation / Rue Coenraets 72, B-1060 Brussels / 
-V.A.T. BE 0896.755.397
-
 
 
