--- a/src/about.html
+++ b/src/about.html
@@ -11,9 +11,13 @@ path: about
       lets talk about it, while we are already doing it...
     </strong>
  </h1>
-
- <br>
-    
+<br>
+  </h2>
+    <small class="text-indigo-300"> 
+    <a href="https://rezgauche.be/posts/rezgauche-be/" target="_self" class="none">project / locality / purpose / activities / participation / residency / estimated budget / roadmap</a 
+    </small>
+</h2>
+<br><br>    
 </h2>
       contact
 </h2>
