--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,13 @@
 ---
 layout: default
-title: rez gauche
+title: rez gauche 
 path: home
 ---
 
 <div class="container mx-auto lg:h-screen flex flex-col justify-center items-center">
   <h1>
     
-    <strong class="bg-clip-text text-transparent bg-gradient-to-r from-green-500 to-purple-500">
+    <strong class="bg-text text-transparent bg-gradient-to-r from-green-500 to-purple-500">
       {{title}}
     </strong>
   </h1>
