--- a/src/about.html
+++ b/src/about.html
@@ -27,13 +27,13 @@ path: about
 <p>
    <small class="text-gray-400">
 <br>
-      email: info@transdisciplinary.art  
+      email: mail@rezgauche.be  
 <br>
-     address: Theodore Verhaegenstraat 154/rdc L B-1060 Brussels, Belgium 
+     address: Theodore Verhaegenstraat 154, rezgauche, B-1060 Brussels, Belgium 
 <br>
      telephone: +32 488 367 723
 <br>
-     admin: Verenigde Producties vzw, activiteit nr. 06349 transdisciplinary art foundation / Rue Coenraets 72, B-1060 Brussels / 
+     admin: Verenigde Producties vzw, activiteit nr. 06349 transdisciplinary art foundation, project rezgauche / Rue Coenraets 72, B-1060 Brussels / 
 V.A.T. BE 0896.755.397
 <br>
 </p>
